feat: 增强项目发起全流程Skill化文档
**架构设计文档_v0.8**：
- 新增第九章「项目发起全流程Skill相关数据模型」
  - 项目模板Skill表（project_templates）
  - 任务拆解Skill相关表
  - 预算评估Skill相关表
  - 项目发起相关API
  - Skill在项目全流程的分布

**原型设计文档_v0.8**：
- 新增第二章「项目发起全流程页面原型」
  - 2.7 选择项目模板
  - 2.8 项目模板详情
  - 2.9 任务拆解（使用Skill）
  - 2.10 预算评估（使用Skill）
  - 2.11 选择验收标准

**场景设计文档_v0.8**：
- 重写场景九「发起人发布项目（使用全流程Skill）」
  - 步骤1：选择项目模板
  - 步骤2：查看模板详情并使用
  - 步骤3：填写项目描述
  - 步骤4：任务拆解结果（使用@ai-pm/task-breakdown）
  - 步骤5：预算评估（使用@ai-pm/budget-estimate）
  - 步骤6：选择验收标准
  - 步骤7：发布项目
- 新增场景十「发起人使用Skill调整项目」

**文档变化**：
- 架构文档：+~200行
- 原型文档：+~150行
- 场景文档：完整重写，从~50行到~200行

--- a/design/原型设计文档_v0.8.md
+++ b/design/原型设计文档_v0.8.md
@@ -569,6 +569,238 @@ P2（可以有）：
 
 ---
 
+## 二、项目发起全流程页面原型（v0.8增强）
+
+### 2.7 选择项目模板
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 选择项目模板                                                    [上一步] [下一步] │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ┌─ 项目类型 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  选择项目类型：                                                   │   │
+│  │                                                                    │   │
+│  │  ┌───────────────┐ ┌───────────────┐ ┌───────────────┐         │   │
+│  │  │ 🖥️ Web开发    │ │ 📱 移动端开发  │ │ 📊 数据分析   │         │   │
+│  │  │                │ │                │ │                │         │   │
+│  │  │ 标准Web项目流程 │ │ 移动端App流程  │ │ 数据分析流程  │         │   │
+│  │  │ ⭐推荐         │ │                │ │                │         │   │
+│  │  └───────────────┘ └───────────────┘ └───────────────┘         │   │
+│  │                                                                    │   │
+│  │  ┌───────────────┐ ┌───────────────┐ ┌───────────────┐         │   │
+│  │  │ 🔌 API开发    │ │ 🤖 机器学习   │ │ 🔧 自定义     │         │   │
+│  │  │                │ │                │ │                │         │   │
+│  │  │ RESTful API   │ │ ML项目流程    │ │ 从空白开始    │         │   │
+│  │  │                │ │                │ │                │         │   │
+│  │  └───────────────┘ └───────────────┘ └───────────────┘         │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 推荐模板 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  📌 推荐使用此模板：@ai-pm/web-dev-template                     │   │
+│  │     ─────────────────────────────────────────                      │   │
+│  │     使用次数：1,234 | 好评率：96% | 平均项目周期：2周           │   │
+│  │                                                                    │   │
+│  │  [使用此模板]  [查看模板详情]  [查看其他模板]                │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.8 项目模板详情
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 项目模板详情                                                  [上一步] [下一步] │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ┌─ 模板信息 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  🖥️ @ai-pm/web-dev-template (Web开发)                        │   │
+│  │     ─────────────────────────────────────────                      │   │
+│  │     作者：平台官方 | 使用次数：1,234 | 好评率：96%            │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 流程预览 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  ┌───────────────────────────────────────────────────────────┐  │   │
+│  │  │ 环节1：需求分析                                             │  │   │
+│  │  │  └── 任务1.1：需求文档编写                                │  │   │
+│  │  │  └── 任务1.2：原型设计                                     │  │   │
+│  │  │                                                              │  │   │
+│  │  │ 环节2：后端开发                                             │  │   │
+│  │  │  └── 任务2.1：API设计                                       │  │   │
+│  │  │  └── 任务2.2：数据库设计                                    │  │   │
+│  │  │  └── 任务2.3：功能开发                                     │  │   │
+│  │  │                                                              │  │   │
+│  │  │ 环节3：前端开发                                             │  │   │
+│  │  │  └── ...                                                     │  │   │
+│  │  │                                                              │  │   │
+│  │  │ 环节4：测试部署                                             │  │   │
+│  │  │  └── ...                                                     │  │   │
+│  │  └───────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 推荐的Skill ───────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  ├─ @ai-pm/backend-api-dev (后端开发) ⭐                     │   │
+│  │  ├─ @ai-pm/frontend-react-dev (前端开发)                     │   │
+│  │  ├─ @ai-pm/test-coverage (测试覆盖)                           │   │
+│  │  └─ @ai-pm/api-documentation (API文档)                       │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  [使用此模板]  [自定义模板]  [返回]                                   │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.9 任务拆解（使用Skill）
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 任务拆解                                                    [上一步] [下一步] │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ┌─ 项目描述 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  项目名称：AI代码审查工具                                        │   │
+│  │                                                                    │   │
+│  │  项目描述：                                                      │   │
+│  │  开发一个AI驱动的代码审查工具，支持Python/JavaScript/Go语言，    │   │
+│  │  能够自动检测代码规范问题、安全漏洞、性能问题，并提供修复建议。   │   │
+│  │                                                                    │   │
+│  │  [使用任务拆解Skill自动生成]                                    │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 拆解结果 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  🤖 任务拆解结果（使用@ai-pm/task-breakdown）                  │   │
+│  │     ─────────────────────────────────────────                      │   │
+│  │     预计工期：2周 | 复杂度：中等 | 任务数：6个                │   │
+│  │                                                                    │   │
+│  │  环节1：后端API开发（3个任务）                                   │   │
+│  │  ├── 任务1.1：用户认证模块                              [¥3,000] │   │
+│  │  │      技能：Python, FastAPI                                 │   │
+│  │  │      验收：@ai-pm/basic-review                            │   │
+│  │  │                                                              │   │
+│  │  ├── 任务1.2：代码解析服务                              [¥4,000] │   │
+│  │  │      技能：Python, AST分析                                  │   │
+│  │  │      验收：@ai-pm/security-review                         │   │
+│  │  │                                                              │   │
+│  │  └── 任务1.3：AI审查集成                                [¥3,000] │   │
+│  │         技能：Python, OpenAI API                              │   │
+│  │         验收：@ai-pm/performance-review                      │   │
+│  │                                                                │   │
+│  │  环节2：前端界面开发（2个任务）                                 │   │
+│  │  ├── 任务2.1：项目首页                                   [¥2,500] │   │
+│  │  └── 任务2.2：审查结果页                                 [¥2,500] │   │
+│  │                                                                │   │
+│  │  环节3：测试与部署（1个任务）                                   │   │
+│  │  └── 任务3.1：测试与部署                                   [¥2,000] │   │
+│  │                                                                │   │
+│  │  💰 预算合计：¥17,000                                        │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  [调整任务]  [调整预算]  [确认拆解结果]                              │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.10 预算评估（使用Skill）
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 预算评估                                                    [上一步] [下一步] │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ┌─ 预算评估结果 ──────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  💰 预算评估（使用@ai-pm/budget-estimate）                     │   │
+│  │     ─────────────────────────────────────────                      │   │
+│  │     建议预算：¥15,000-20,000                                   │   │
+│  │     推荐预算：¥17,000                                          │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 预算分解 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  ┌───────────────────────────────────────────────────────────┐  │   │
+│  │  │ 环节               │ 预算        │ 占比      │ 建议      │  │   │
+│  │  ├────────────────────┼────────────┼───────────┼───────────┤  │   │
+│  │  │ 环节1：后端API    │ ¥10,000    │ 58.8%    │ 合理     │  │   │
+│  │  │ 环节2：前端界面   │ ¥5,000     │ 29.4%    │ 略低     │  │   │
+│  │  │ 环节3：测试部署   │ ¥2,000     │ 11.8%    │ 合理     │  │   │
+│  │  └───────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 历史参考 ──────────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  📊 类似项目参考：                                               │   │
+│  │  ├── 类似项目数：15个                                           │   │
+│  │  ├── 平均预算：¥16,500                                         │   │
+│  │  ├── 最低预算：¥12,000                                         │   │
+│  │  └── 最高预算：¥25,000                                         │   │
+│  │                                                                    │   │
+│  │  ⚠️ 风险提示：                                                  │   │
+│  │  ├── AI集成部分成本较高，建议预留10%缓冲                        │   │
+│  │  └── 前端界面复杂度可能超预期                                  │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  💰 设置预算：                                              [ ¥17,000 ]     │
+│                                                                    [确认预算] │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+### 2.11 选择验收标准
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 选择验收标准                                                  [上一步] [下一步] │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                             │
+│  ┌─ 各环节验收标准 ──────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  环节1：后端API开发                                              │   │
+│  │  ─────────────────────────────────────────                        │   │
+│  │  选择验收标准：                                                    │   │
+│  │  ┌───────────────────────────────────────────────────────────┐  │   │
+│  │  │ ☑ @ai-pm/basic-review (官方)                          │  │   │
+│  │  │     检查项：功能完整性、代码质量、测试覆盖、文档完整性   │  │   │
+│  │  │     权重：功能40%、代码30%、测试20%、文档10%           │  │   │
+│  │  │     自动检查：ESLint, pytest                            │  │   │
+│  │  └───────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  │  ┌───────────────────────────────────────────────────────────┐  │   │
+│  │  │ ☐ @ai-pm/security-review (官方) ⭐推荐                 │  │   │
+│  │  │     检查项：OWASP漏洞、依赖安全、认证授权               │  │   │
+│  │  │     自动检查：dependency-check, npm audit               │  │   │
+│  │  └───────────────────────────────────────────────────────────┘  │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+│  ┌─ 发起人自定义标准 ─────────────────────────────────────────────────┐      │
+│  │                                                                    │   │
+│  │  [添加自定义验收标准]                                            │   │
+│  │                                                                    │   │
+│  └─────────────────────────────────────────────────────────────────────┘      │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
 ## 七、v0.8更新说明
 
 ### 7.1 新增页面原型
