--- a/design/架构设计文档_v0.8.md
+++ b/design/架构设计文档_v0.8.md
@@ -1573,3 +1573,369 @@ GET /api/v1/users/credit-rankings?type=participant&limit=100
 **文档版本**: v0.8
 **更新日期**: 2026-02-18
 **核心原则**：优秀的人的经验以Skill方式用于项目各环节
+
+---
+
+## 九、项目发起全流程Skill相关数据模型
+
+### 9.1 项目模板Skill表
+
+```typescript
+// 9.1.1 项目模板表
+model ProjectTemplate {
+  id              String    @id @default(uuid())
+  name            String    // 模板名称
+  description     String    // 模板描述
+  authorId        String
+  author          User      @relation(fields: [authorId], references: [id])
+  
+  // 模板类型
+  type            ProjectTemplateType
+  
+  // 模板结构
+  stages          Json      // 环节列表
+  defaultTasks   Json      // 默认任务配置
+  milestones      Json      // 里程碑配置
+  
+  // 推荐的Skill
+  recommendedSkills String[] // 推荐的Skill列表
+  
+  // 统计
+  usageCount      Int       @default(0)
+  avgRating       Float?
+  
+  // 开源信息
+  license         String    @default("MIT")
+  repoUrl         String?
+  
+  // 状态
+  status          ProjectTemplateStatus @default(DRAFT)
+  
+  createdAt       DateTime  @default(now())
+  updatedAt      DateTime  @updatedAt
+  
+  @@map("project_templates")
+}
+
+enum ProjectTemplateType {
+  WEB_DEV           // Web开发
+  MOBILE_APP        // 移动端开发
+  DATA_ANALYSIS     // 数据分析
+  API_DEV           // API开发
+  ML_PROJECT        // 机器学习项目
+  CUSTOM            // 自定义
+}
+
+enum ProjectTemplateStatus {
+  DRAFT
+  PUBLISHED
+  DEPRECATED
+}
+
+// 9.1.2 项目模板使用记录
+model ProjectTemplateUsage {
+  id              String    @id @default(uuid())
+  
+  templateId     String
+  template        ProjectTemplate @relation(fields: [templateId], references: [id])
+  
+  projectId       String
+  project         Project   @relation(fields: [projectId], references: [id])
+  
+  // 自定义配置
+  customizations  Json?     // 对模板的自定义修改
+  
+  createdAt       DateTime  @default(now())
+  
+  @@unique([projectId])
+  @@map("project_template_usages")
+}
+```
+
+### 9.2 任务拆解Skill相关表
+
+```typescript
+// 9.2.1 任务拆解结果表
+model TaskBreakdownResult {
+  id              String    @id @default(uuid())
+  
+  projectId       String
+  project         Project   @relation(fields: [projectId], references: [id])
+  
+  // 使用的Skill
+  skillId         String?
+  skill           InitialCreditSkill? @relation(fields: [skillId], references: [id])
+  
+  // 输入
+  projectDescription String   // 项目描述
+  projectType      String    // 项目类型
+  selectedTemplate String?   // 选择的模板
+  
+  // 输出
+  suggestedTasks  Json      // 建议任务列表
+  suggestedMilestones Json   // 建议里程碑
+  
+  // 评估
+  complexity      ProjectComplexity @default(MEDIUM)
+  estimatedDuration String?  // 预计工期
+  
+  // 发起人调整
+  adjustedTasks   Json?     // 调整后的任务
+  adjustedBudget  Float?     // 调整后的预算
+  
+  createdAt       DateTime  @default(now())
+  updatedAt       DateTime  @updatedAt
+  
+  @@map("task_breakdown_results")
+}
+
+enum ProjectComplexity {
+  VERY_LOW
+  LOW
+  MEDIUM
+  HIGH
+  VERY_HIGH
+}
+
+// 9.2.2 任务详情表
+model TaskDetail {
+  id              String    @id @default(uuid())
+  
+  breakdownResultId String
+  breakdownResult  TaskBreakdownResult @relation(fields: [breakdownResultId], references: [id])
+  
+  // 任务信息
+  name            String
+  description     String
+  stage           String    // 所属环节
+  
+  // 预算
+  suggestedBudget Float?    // 建议预算
+  finalBudget     Float     // 最终预算
+  
+  // 技能需求
+  requiredSkills  String[]
+  requiredLevel   String?   // 所需技能等级
+  
+  // 验收标准
+  qualityStandard  Json?    // 质量标准
+  
+  // 工期
+  estimatedHours  Int?
+  deadline        DateTime?
+  
+  // 排序
+  order          Int       @default(0)
+  
+  @@map("task_details")
+}
+```
+
+### 9.3 预算评估Skill相关表
+
+```typescript
+// 9.3.1 预算评估结果表
+model BudgetEstimateResult {
+  id              String    @id @default(uuid())
+  
+  projectId       String
+  project         Project   @relation(fields: [projectId], references: [id])
+  
+  // 使用的Skill
+  skillId         String?
+  skill           InitialCreditSkill? @relation(fields: [skillId], references: [id])
+  
+  // 输入
+  taskCount       Int       // 任务数量
+  complexity      ProjectComplexity
+  duration        String    // 预计工期
+  
+  // 评估结果
+  minBudget       Float     // 最低预算
+  maxBudget       Float     // 最高预算
+  recommendedBudget Float    // 推荐预算
+  
+  // 详细分解
+  budgetBreakdown Json      // 预算分解
+  // {
+  //   "stage1": 3000,
+  //   "stage2": 4000,
+  //   "stage3": 3000
+  // }
+  
+  // 历史参考
+  historicalData Json?     // 历史项目参考
+  // {
+  //   "similarProjects": 15,
+  //   "avgBudget": 10000,
+  //   "minBudget": 8000,
+  //   "maxBudget": 15000
+  // }
+  
+  // 风险提示
+  riskWarnings     String[]
+  
+  // 发起人调整
+  finalBudget     Float?    // 最终设置预算
+  
+  createdAt       DateTime  @default(now())
+  updatedAt       DateTime  @updatedAt
+  
+  @@map("budget_estimate_results")
+}
+
+// 9.3.2 预算调整记录
+model BudgetAdjustment {
+  id              String    @id @default(uuid())
+  
+  projectId       String
+  project         Project   @relation(fields: [projectId], references: [id])
+  
+  // 调整信息
+  originalBudget  Float
+  adjustedBudget  Float
+  adjustmentReason String?
+  
+  // 时间
+  adjustedAt     DateTime  @default(now())
+  
+  @@map("budget_adjustments")
+}
+```
+
+### 9.4 项目发起相关API
+
+```typescript
+// 9.4.1 项目模板API
+GET /api/v1/project-templates                    // 获取模板列表
+GET /api/v1/project-templates/:id             // 获取模板详情
+POST /api/v1/project-templates                // 创建模板
+PUT /api/v1/project-templates/:id             // 更新模板
+DELETE /api/v1/project-templates/:id           // 删除模板
+
+// 使用模板创建项目
+POST /api/v1/projects/from-template
+{
+  templateId: "xxx",
+  project: {
+    title: "xxx",
+    description: "xxx"
+  },
+  customizations: {...}
+}
+
+// 9.4.2 任务拆解API
+POST /api/v1/projects/:id/task-breakdown
+{
+  projectDescription: "xxx",
+  projectType: "WEB_DEV",
+  selectedTemplate: "xxx"
+}
+// 响应
+{
+  suggestedTasks: [...],
+  suggestedMilestones: [...],
+  complexity: "MEDIUM",
+  estimatedDuration: "2周"
+}
+
+PUT /api/v1/projects/:id/task-breakdown
+{
+  adjustedTasks: [...],
+  adjustedBudget: 10000
+}
+
+// 9.4.3 预算评估API
+POST /api/v1/projects/:id/budget-estimate
+{
+  taskCount: 6,
+  complexity: "MEDIUM",
+  duration: "2周"
+}
+// 响应
+{
+  minBudget: 8000,
+  maxBudget: 12000,
+  recommendedBudget: 10000,
+  budgetBreakdown: {...},
+  historicalData: {...},
+  riskWarnings: [...]
+}
+
+PUT /api/v1/projects/:id/budget
+{
+  finalBudget: 10000
+}
+```
+
+### 9.5 Skill在项目全流程的分布
+
+```typescript
+// Skill在项目各环节的应用
+const projectLifecycleSkills = {
+  initiation: {
+    projectTemplate: {
+      description: "项目流程模板",
+      examples: ["@ai-pm/web-dev-template", "@ai-pm/mobile-app-template"],
+      purpose: "确定项目标准流程"
+    },
+    taskBreakdown: {
+      description: "任务拆解Skill",
+      examples: ["@ai-pm/task-breakdown", "@custom/user-task-breakdown"],
+      purpose: "自动拆分任务"
+    },
+    budgetEstimate: {
+      description: "预算评估Skill",
+      examples: ["@ai-pm/budget-estimate", "@custom/user-budget-estimate"],
+      purpose: "估算合理预算"
+    },
+    skillRequirement: {
+      description: "技能需求Skill",
+      examples: ["@ai-pm/skill-match"],
+      purpose: "推荐所需技能"
+    }
+  },
+  execution: {
+    codeReview: {
+      description: "代码审查Skill",
+      examples: ["@ai-pm/code-review", "@custom/python-code-review"],
+      purpose: "代码质量把关"
+    },
+    qualityCheck: {
+      description: "质量检查Skill",
+      examples: ["@ai-pm/quality-check"],
+      purpose: "自动检查质量"
+    },
+    securityScan: {
+      description: "安全扫描Skill",
+      examples: ["@ai-pm/security-scan"],
+      purpose: "安全漏洞检测"
+    }
+  },
+  delivery: {
+    reviewStandard: {
+      description: "验收标准Skill",
+      examples: ["@ai-pm/basic-review", "@ai-pm/security-review"],
+      purpose: "定义验收标准"
+    },
+    testCoverage: {
+      description: "测试覆盖Skill",
+      examples: ["@ai-pm/test-coverage"],
+      purpose: "评估测试覆盖"
+    }
+  },
+  completion: {
+    reportGenerate: {
+      description: "报告生成Skill",
+      examples: ["@ai-pm/report-generate"],
+      purpose: "生成项目报告"
+    }
+  }
+};
+```
+
+---
+
+**文档版本**: v0.8
+**更新日期**: 2026-02-19
+**核心原则**：优秀的人的经验以Skill方式用于项目各环节
