--- a/design/场景设计文档_v0.8.md
+++ b/design/场景设计文档_v0.8.md
@@ -582,81 +582,251 @@
 
 ---
 
-## 场景九：发起人发布项目
+## 场景九：发起人发布项目（使用全流程Skill）
 
 ### 场景描述
-张三想发布一个AI代码审查工具项目。
+张三想发布一个AI代码审查工具项目。他使用平台提供的各种Skill来辅助项目发起。
+
+### 完整流程
+
+```
+张三发起项目流程：
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 1：选择项目模板                                                   │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 张三点击"发布项目"，进入项目发起向导：                                 │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🚀 发布新项目                                                      │   │
+│ │                                                                    │   │
+│ │ 第一步：选择项目类型                                               │   │
+│ │                                                                    │   │
+│ │ ┌───────────────┐ ┌───────────────┐ ┌───────────────┐           │   │
+│ │ │ 🖥️ Web开发    │ │ 📱 移动端开发  │ │ 📊 数据分析   │           │   │
+│ │ │                │ │                │ │                │           │   │
+│ │ │ 标准Web项目流程 │ │ 移动端App流程  │ │ 数据分析流程  │           │   │
+│ │ │ ⭐推荐         │ │                │ │                │           │   │
+│ │ └───────────────┘ └───────────────┘ └───────────────┘           │   │
+│ │                                                                    │   │
+│ │ ┌───────────────┐ ┌───────────────┐ ┌───────────────┐           │   │
+│ │ │ 🔌 API开发    │ │ 🤖 机器学习   │ │ 🔧 自定义     │           │   │
+│ │ │                │ │                │ │                │           │   │
+│ │ │ RESTful API   │ │ ML项目流程    │ │ 从空白开始    │           │   │
+│ │ │                │ │                │ │                │           │   │
+│ │ └───────────────┘ └───────────────┘ └───────────────┘           │   │
+│ │                                                                    │   │
+│ │ [上一步]  [下一步]                                                │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 2：查看模板详情并使用                                            │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 张三点击"Web开发"卡片，查看模板详情：                                │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🖥️ @ai-pm/web-dev-template (Web开发)                            │   │
+│ │                                                                    │   │
+│ │ 流程结构：                                                          │   │
+│ │ ├── 环节1：需求分析                                                │   │
+│ │ ├── 环节2：后端开发                                                │   │
+│ │ ├── 环节3：前端开发                                                │   │
+│ │ └── 环节4：测试部署                                                │   │
+│ │                                                                    │   │
+│ │ 推荐的Skill：                                                       │   │
+│ │ ├── @ai-pm/backend-api-dev (后端开发) ⭐                          │   │
+│ │ ├── @ai-pm/frontend-react-dev (前端开发)                          │   │
+│ │ └── @ai-pm/test-coverage (测试覆盖)                              │   │
+│ │                                                                    │   │
+│ │ [使用此模板]  [自定义]  [返回]                                     │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 3：填写项目描述                                                   │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 张三填写项目描述：                                                    │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 📝 项目基本信息                                                    │   │
+│ │                                                                    │   │
+│ │ 项目名称：AI代码审查工具                                           │   │
+│ │                                                                    │   │
+│ │ 项目描述：                                                        │   │
+│ │ 开发一个AI驱动的代码审查工具，支持Python/JavaScript/Go语言，        │   │
+│ │ 能够自动检测代码规范问题、安全漏洞、性能问题，并提供修复建议。     │   │
+│ │                                                                    │   │
+│ │ [使用任务拆解Skill自动生成任务列表] ⭐                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 4：任务拆解结果（使用@ai-pm/task-breakdown）                    │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 系统使用任务拆解Skill自动生成任务列表：                               │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 🤖 任务拆解结果（使用@ai-pm/task-breakdown）                     │   │
+│ │                                                                    │   │
+│ │ 项目：AI代码审查工具                                               │   │
+│ │ 预计工期：2周 | 复杂度：中等 | 任务数：6个                       │   │
+│ │                                                                    │   │
+│ │ 环节1：后端API开发（3个任务）                                     │   │
+│ │ ├── 任务1.1：用户认证模块    ¥3,000  技能：Python, FastAPI      │   │
+│ │ ├── 任务1.2：代码解析服务    ¥4,000  技能：Python, AST分析      │   │
+│ │ └── 任务1.3：AI审查集成      ¥3,000  技能：Python, OpenAI      │   │
+│ │                                                                    │   │
+│ │ 环节2：前端界面开发（2个任务）                                    │   │
+│ │ ├── 任务2.1：项目首页        ¥2,500  技能：React, TypeScript   │   │
+│ │ └── 任务2.2：审查结果页      ¥2,500  技能：React, Chart.js    │   │
+│ │                                                                    │   │
+│ │ 环节3：测试部署（1个任务）                                        │   │
+│ │ └── 任务3.1：测试与部署      ¥2,000  技能：pytest, Docker      │   │
+│ │                                                                    │   │
+│ │ 💰 预算合计：¥17,000                                             │   │
+│ │                                                                    │   │
+│ │ [调整任务]  [调整预算]  [确认拆解] ⭐                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 5：预算评估（使用@ai-pm/budget-estimate）                       │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 系统使用预算评估Skill给出建议：                                      │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 💰 预算评估（使用@ai-pm/budget-estimate）                        │   │
+│ │                                                                    │   │
+│ │ 建议预算：¥15,000-20,000                                         │   │
+│ │ 推荐预算：¥17,000                                                │   │
+│ │                                                                    │   │
+│ │ 预算分解：                                                        │   │
+│ │ ├── 环节1：后端API  ¥10,000 (58.8%)  合理                       │   │
+│ │ ├── 环节2：前端界面  ¥5,000  (29.4%)  略低                       │   │
+│ │ └── 环节3：测试部署  ¥2,000  (11.8%)  合理                       │   │
+│ │                                                                    │   │
+│ │ 历史参考：                                                        │   │
+│ │ ├── 类似项目：15个                                                │   │
+│ │ ├── 平均预算：¥16,500                                            │   │
+│ │ └── 范围：¥12,000-25,000                                        │   │
+│ │                                                                    │   │
+│ │ ⚠️ 风险提示：                                                     │   │
+│ │ ├── AI集成部分成本较高，建议预留10%缓冲                          │   │
+│ │ └── 前端界面复杂度可能超预期                                      │   │
+│ │                                                                    │   │
+│ │ 💰 设置预算：¥17,000 [确认]                                     │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 6：选择验收标准                                                   │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 张三为每个环节选择验收标准：                                         │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ 📋 各环节验收标准                                                  │   │
+│ │                                                                    │   │
+│ │ 环节1：后端API开发                                               │   │
+│ │ ├── ☑ @ai-pm/basic-review (官方)                                │   │
+│ │ └── ☐ @ai-pm/security-review (官方) ⭐推荐                      │   │
+│ │                                                                    │   │
+│ │ 环节2：前端界面开发                                               │   │
+│ │ └── ☑ @ai-pm/basic-review (官方)                                │   │
+│ │                                                                    │   │
+│ │ 环节3：测试部署                                                   │   │
+│ │ ├── ☑ @ai-pm/basic-review (官方)                                │   │
+│ │ └── ☑ @ai-pm/test-coverage (官方) ⭐推荐                        │   │
+│ │                                                                    │   │
+│ │ [添加自定义标准]  [上一步]  [下一步]                              │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+                                    │
+                                    ▼
+┌─────────────────────────────────────────────────────────────────────────────┐
+│ 步骤 7：发布项目                                                      │
+├─────────────────────────────────────────────────────────────────────────────┤
+│                                                                            │
+│ 项目发布完成：                                                        │
+│ ┌─────────────────────────────────────────────────────────────────────┐   │
+│ │ ✅ 项目发布成功                                                    │   │
+│ │                                                                    │   │
+│ │ 项目：AI代码审查工具                                               │   │
+│ │ 模板：@ai-pm/web-dev-template                                    │   │
+│ │ 预算：¥17,000 (平台抽成¥850)                                     │   │
+│ │ 环节：3个 / 任务：6个                                             │   │
+│ │                                                                    │   │
+│ │ 使用Skill汇总：                                                   │   │
+│ │ ├── @ai-pm/web-dev-template (项目模板)                          │   │
+│ │ ├── @ai-pm/task-breakdown (任务拆解)                           │   │
+│ │ ├── @ai-pm/budget-estimate (预算评估)                           │   │
+│ │ ├── @ai-pm/basic-review (验收标准×3)                            │   │
+│ │ └── @ai-pm/security-review (验收标准×1)                         │   │
+│ │                                                                    │   │
+│ │ 下一步：等待参与者认领                                            │   │
+│ │                                                                    │   │
+│ │ [查看项目]  [返回首页]                                            │   │
+│ └─────────────────────────────────────────────────────────────────────┘   │
+│                                                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 场景十：发起人使用Skill调整项目（v0.8新增）
+
+### 场景描述
+张三发布项目后，发现有参与者认领前可以调整项目。
 
 ### 流程
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 1：创建项目                                                      │
+│ 项目管理页面                                                        │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ 项目创建：                                                            │
+│ 张三在项目列表中点击"AI代码审查工具"：                               │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ 📝 创建新项目                                                      │   │
+│ │ 📌 AI代码审查工具                        🏷️ 社区     [管理]       │   │
+│ │     状态：待认领                    预算：¥17,000                │   │
 │ │                                                                    │   │
-│ │ 基本信息：                                                        │   │
-│ │ ├─ 项目名称：AI代码审查工具                                        │   │
-│ │ ├─ 项目描述：开发一个AI驱动的代码审查工具                         │   │
-│ │ └─ 模式：[●社区模式 ○企业模式]                                 │   │
+│ │ 使用的Skill：                                                    │   │
+│ │ ├── @ai-pm/web-dev-template (项目模板)                          │   │
+│ │ ├── @ai-pm/task-breakdown (任务拆解)                           │   │
+│ │ ├── @ai-pm/budget-estimate (预算评估)                           │   │
+│ │ ├── @ai-pm/basic-review (验收标准)                              │   │
+│ │ └── @ai-pm/security-review (验收标准)                            │   │
 │ │                                                                    │   │
-│ │ 预算：                                                            │   │
-│ │ ├─ 总预算：¥10,000                                               │   │
-│ │ └─ 平台抽成：5%（¥500）                                          │   │
-│ │                                                                    │   │
-│ │ [下一步]                                                          │   │
+│ │ [编辑项目]  [调整任务]  [调整预算]  [查看详情]                │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
                                     │
                                     ▼
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 2：拆解任务                                                      │
+│ 调整任务列表                                                        │
 ├─────────────────────────────────────────────────────────────────────────────┤
 │                                                                            │
-│ 任务拆解：                                                            │
+│ 张三想调整任务细节：                                                 │
 │ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ 📋 环节拆解                                                        │   │
+│ │ 📋 任务列表（使用@ai-pm/task-breakdown v2）                    │   │
 │ │                                                                    │   │
-│ │ 环节1：后端API开发                                                 │   │
-│ │ ├─ 预算：¥3,000 (平台抽成后¥2,850)                               │   │
-│ │ ├─ 验收标准：@ai-pm/basic-review                                 │   │
-│ │ └─ 专长要求：Python, FastAPI                                     │   │
+│ │ 环节1：后端API开发                                               │   │
+│ │ ├── 任务1.1：用户认证模块    ¥3,000  [编辑]  [删除]           │   │
+│ │ ├── 任务1.2：代码解析服务    ¥4,000  [编辑]  [删除]           │   │
+│ │ └── 任务1.3：AI审查集成      ¥3,000  [编辑]  [添加子任务]     │   │
 │ │                                                                    │   │
-│ │ 环节2：前端界面开发                                               │   │
-│ │ ├─ 预算：¥4,000 (平台抽成后¥3,800)                               │   │
-│ │ ├─ 验收标准：@ai-pm/basic-review                                 │   │
-│ │ └─ 专长要求：React, TypeScript                                   │   │
-│ │                                                                    │   │
-│ │ 环节3：测试用例编写                                               │   │
-│ │ ├─ 预算：¥3,000 (平台抽成后¥2,850)                               │   │
-│ │ ├─ 验收标准：@ai-pm/basic-review                                 │   │
-│ │ └─ 专长要求：Python, 测试                                        │   │
-│ │                                                                    │   │
-│ │ [+ 添加环节]  [上一步]  [发布项目]                              │   │
-│ └─────────────────────────────────────────────────────────────────────┘   │
-│                                                                            │
-└─────────────────────────────────────────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌─────────────────────────────────────────────────────────────────────────────┐
-│ 步骤 3：发布项目                                                      │
-├─────────────────────────────────────────────────────────────────────────────┤
-│                                                                            │
-│ 项目发布：                                                            │
-│ ┌─────────────────────────────────────────────────────────────────────┐   │
-│ │ ✅ 项目发布成功                                                    │   │
-│ │                                                                    │   │
-│ │ 项目：AI代码审查工具                                               │   │
-│ │ 预算：¥10,000 (平台抽成¥500)                                     │   │
-│ │ 环节：3个                                                         │   │
-│ │                                                                    │   │
-│ │ 下一步：等待参与者认领                                            │   │
-│ │                                                                    │   │
-│ │ [查看项目]  [返回首页]                                          │   │
+│ │ [+ 添加任务]  [保存更改]  [取消]                                │   │
 │ └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                            │
 └─────────────────────────────────────────────────────────────────────────────┘
@@ -665,5 +835,5 @@
 ---
 
 **文档版本**: v0.8
-**更新日期**: 2026-02-18
+**更新日期**: 2026-02-19
 **核心原则**：优秀的人的经验以Skill方式用于项目各环节
